Archive capture dates: small improvement
git-svn-id: https://svn.l3s.uni-hannover.de/learnweb/trunk/LearnwebOER/Learnweb@4220 422a2c9f-66af-4668-9993-60dc3b0871b8